--- a/deep-learning-with-pytorch-step-by-step/02_simple_regression_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/02_simple_regression_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM7H4KiGzDkbQs72VdDtGEH",
+      "authorship_tag": "ABX9TyM85VO6CI6MCO0SPj3J/8bi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
       ],
       "metadata": {
         "id": "pgGfHWV5oZqU",
-        "outputId": "17af8f74-b336-4568-831a-26bcdbc7ef8f",
+        "outputId": "223173ed-5e33-485f-a0a1-f1e24fe8a57d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -197,10 +197,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 502
+          "height": 505
         },
         "id": "ZBTcz6BhqYoR",
-        "outputId": "a75c533d-cd04-4397-f623-1c7f0ad563b4"
+        "outputId": "0b46c4c2-91c8-4b68-9045-04525c6431bc"
       },
       "execution_count": 5,
       "outputs": [
@@ -209,8 +209,8 @@
           "data": {
             "text/plain": [
               "(<Figure size 864x432 with 2 Axes>,\n",
-              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f5f6f5b1a50>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f5f01c90750>],\n",
+              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f734fd83d90>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f72dad70790>],\n",
               "       dtype=object))"
             ]
           },
@@ -288,7 +288,7 @@
       ],
       "metadata": {
         "id": "br2g0-4HSk4d",
-        "outputId": "9539da26-3409-4203-a998-9bd84b345298",
+        "outputId": "894609c0-9ab2-4081-8c0b-d45b1cc4d305",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -372,7 +372,7 @@
       ],
       "metadata": {
         "id": "1n2CtsUXS9gj",
-        "outputId": "92592db0-f5d5-47ad-8939-e918183e11fc",
+        "outputId": "f8c1d626-e327-4c88-da8e-728909f1518c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -424,7 +424,7 @@
       ],
       "metadata": {
         "id": "Vl3-r09yURpb",
-        "outputId": "b108c8be-d4b2-4687-82de-2bea8d9a7c77",
+        "outputId": "888afde7-2921-471c-cb2c-c458d844da06",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -478,7 +478,7 @@
       ],
       "metadata": {
         "id": "pkbTlKSbUrD4",
-        "outputId": "dc17ae02-34af-4003-f229-8a33a3d1ae41",
+        "outputId": "01abec25-0da0-4816-f33e-f56cad7c62fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -583,7 +583,7 @@
       ],
       "metadata": {
         "id": "uzXq0fwnDFgE",
-        "outputId": "8874f916-bb20-47a4-fa30-b16a137485a2",
+        "outputId": "e8f4159f-d623-47b5-d6eb-3c8401ce1ca0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -620,7 +620,7 @@
       ],
       "metadata": {
         "id": "WqxxP3wSFz-D",
-        "outputId": "4f5fc879-441e-4cb8-e24b-eeeed13a2c9b",
+        "outputId": "f41dc6ca-6e16-4b03-a9c5-6ba9c8f41148",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -653,7 +653,7 @@
       ],
       "metadata": {
         "id": "5IwTRGzuGUbG",
-        "outputId": "865abbe3-1420-41e6-bee6-659fb1d0533a",
+        "outputId": "81671df3-1b75-46f7-b098-90db7f63f999",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 433
@@ -712,7 +712,7 @@
       ],
       "metadata": {
         "id": "8QA2sK9tiodM",
-        "outputId": "456ecf8f-def2-4479-80c7-f761f2e5a0c8",
+        "outputId": "170a5cb1-b0ed-42c7-8ead-6d20081e503a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -727,13 +727,13 @@
             "tensor([1, 2, 3])\n",
             "tensor([[1., 1., 1.],\n",
             "        [1., 1., 1.]])\n",
-            "tensor([[[-0.8007, -0.5878, -0.2108,  0.2184],\n",
-            "         [ 0.0775, -0.0531, -0.3204, -0.7619],\n",
-            "         [-0.7329, -0.8550, -0.1801, -1.4654]],\n",
+            "tensor([[[-0.9007, -0.7295,  0.8734, -1.3930],\n",
+            "         [ 0.0743, -0.4748, -1.0372,  0.9437],\n",
+            "         [ 2.2151,  1.6202, -0.4343,  0.2960]],\n",
             "\n",
-            "        [[-2.6376, -0.2023,  0.4227,  1.8063],\n",
-            "         [-1.6945, -1.5589,  1.8485,  0.3544],\n",
-            "         [ 0.2454, -1.7327, -0.8978, -0.0486]]])\n"
+            "        [[ 2.1403,  0.6887,  0.7176, -1.1402],\n",
+            "         [-0.0480, -0.2240, -0.5775, -0.8472],\n",
+            "         [-2.7975,  0.8625, -0.1383, -1.6999]]])\n"
           ]
         }
       ]
@@ -754,7 +754,7 @@
       ],
       "metadata": {
         "id": "v13QAvfnjd8p",
-        "outputId": "2a79d2ad-02a9-4717-a83c-748430071be7",
+        "outputId": "d8bb7816-2c4e-4dae-8761-154fa868b933",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -778,7 +778,7 @@
       ],
       "metadata": {
         "id": "SEUjmq7sjm1e",
-        "outputId": "18d2d208-c129-4e63-e11d-1f1142112a7e",
+        "outputId": "0da9149f-db6d-4ccb-e207-2dafd7835c92",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -818,7 +818,7 @@
       ],
       "metadata": {
         "id": "GUGgd1V_jziz",
-        "outputId": "4ed02cd4-1f24-4d9c-f0a1-9460516c2860",
+        "outputId": "896a9705-6618-4169-e06f-d06d4ab06400",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -862,7 +862,7 @@
       ],
       "metadata": {
         "id": "hIwAxu6jkTsO",
-        "outputId": "7f0f6ad8-4422-4149-8b13-4f0325dbee3c",
+        "outputId": "cd6ef675-7800-4c0e-b158-71029b644a74",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -915,7 +915,7 @@
       ],
       "metadata": {
         "id": "J127k_PVlqHN",
-        "outputId": "7acd5f7f-c7aa-4e3c-f565-b2a26067028e",
+        "outputId": "9d973ef0-dd54-46b1-d0a7-119a4d3e6790",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -960,7 +960,7 @@
       ],
       "metadata": {
         "id": "i2ZOA43XtLKF",
-        "outputId": "14af90f2-aea0-4e46-a90e-2424f6bff536",
+        "outputId": "272a78e1-4d50-49e1-aab7-a821fb73f2a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -996,7 +996,7 @@
       ],
       "metadata": {
         "id": "bhb3xZwXtoRe",
-        "outputId": "6bb6e539-1652-4861-96f4-9eebc872cf16",
+        "outputId": "1ac49461-e09a-4f9d-f835-90b74a94b0bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1042,7 +1042,7 @@
       ],
       "metadata": {
         "id": "s1JGislIuNIg",
-        "outputId": "d97e6d28-93eb-4c59-a83e-23da7133892c",
+        "outputId": "2ebcc157-db5c-46ba-dc3c-a89724d5f1c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1068,7 +1068,7 @@
       ],
       "metadata": {
         "id": "ZAU0yUFeunmX",
-        "outputId": "1e2ae6bb-1a37-4896-b35c-f53791860337",
+        "outputId": "d0ea358f-acdd-4bb7-876b-4c56248d1e28",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1095,7 +1095,7 @@
       ],
       "metadata": {
         "id": "DLl4GTfzutxt",
-        "outputId": "3e254521-692c-422a-926e-8b656ef2ef4f",
+        "outputId": "5965f773-85fe-416e-d0a4-ee67b6528419",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1147,7 +1147,7 @@
       ],
       "metadata": {
         "id": "_Utu0cE4yCRk",
-        "outputId": "ecca9bf2-18de-4c65-8a78-c1d2a3a94279",
+        "outputId": "f11e895b-1dc7-4b3b-b141-eebdef67ed37",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1181,7 +1181,7 @@
       ],
       "metadata": {
         "id": "7eRDuC6byxqP",
-        "outputId": "d1aa3fe7-0054-4787-e9c2-b665a3b8f84a",
+        "outputId": "da71349f-f357-4a2b-ce84-5ad5228884b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1215,7 +1215,7 @@
       ],
       "metadata": {
         "id": "_UX1wXYUznz7",
-        "outputId": "bd7c085f-df95-4499-86b4-88abf1a6bd88",
+        "outputId": "d5daf26d-f6f3-4e92-a7a0-704d3e730a7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1241,7 +1241,7 @@
       ],
       "metadata": {
         "id": "SHdNn3S_0yFt",
-        "outputId": "d3f60195-fff3-42db-d26d-e365dfc54c26",
+        "outputId": "7d07d315-8885-4edb-d334-96bdd292cf36",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1307,7 +1307,7 @@
       ],
       "metadata": {
         "id": "UErHp9X22tU2",
-        "outputId": "30a1f643-8887-44c3-a921-56944bfd3d65",
+        "outputId": "173ebb04-e3a6-455e-c48e-6cdb36c14baf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1330,7 +1330,7 @@
       ],
       "metadata": {
         "id": "dMDY9RT43A0W",
-        "outputId": "c4c2050e-1655-43e2-8d2e-9a45fc68b2a6",
+        "outputId": "36c9340e-6a55-4dde-a932-484181748773",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1372,12 +1372,12 @@
       ],
       "metadata": {
         "id": "9ciOSjfg3vLw",
-        "outputId": "90ce5bca-a460-47d8-a69a-6c5d557b942c",
+        "outputId": "223b574b-e34e-48af-8420-857d808fba2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -1406,7 +1406,7 @@
       "metadata": {
         "id": "DLGHsBBO4Dbl"
       },
-      "execution_count": 36,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1460,12 +1460,12 @@
       ],
       "metadata": {
         "id": "oDj4_Y6VrjXC",
-        "outputId": "b5b40b94-e40d-42b4-c622-a219f0f8b1b6",
+        "outputId": "57011890-6840-48b8-b629-d8ab28d3bcd8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1489,12 +1489,12 @@
       ],
       "metadata": {
         "id": "ZXi9U1tavKJZ",
-        "outputId": "699bc5af-9d9a-4edd-b05b-8eccc165c7b7",
+        "outputId": "1213f87d-1886-43cf-d42e-80ba6ea81beb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -1521,12 +1521,12 @@
       ],
       "metadata": {
         "id": "32L6EkM5ved4",
-        "outputId": "0cd0b975-ad69-4fdd-f359-a58224841373",
+        "outputId": "7ab9f89e-6720-4156-a476-5598cec3b719",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1569,12 +1569,12 @@
       ],
       "metadata": {
         "id": "HyvDwy8nwARL",
-        "outputId": "cfcdc46f-3fd1-48cf-ef55-3bed93e36a2d",
+        "outputId": "da3f0412-65e1-4b8f-91a9-eb6d56e40cf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -1606,10 +1606,205 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Autograd is PyTorch’s automatic differentiation package. Thanks to it, we don’t need\n",
+        "to worry about partial derivatives, chain rule, or anything like it.\n",
+        "\n",
+        "Do you remember the starting point for computing the gradients? \n",
+        "\n",
+        "It was the loss,\n",
+        "as we computed its partial derivatives w.r.t. our parameters. \n",
+        "\n",
+        "Hence, we need to\n",
+        "invoke the `backward()` method from the corresponding Python variable:\n",
+        "`loss.backward()`."
+      ],
       "metadata": {
         "id": "wTCSiNLnwtk9"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 1 - Computes our model's predicted output - forward pass\n",
+        "yhat = b + w * x_train_tensor\n",
+        "\n",
+        "# Step 2 - Computes the loss\n",
+        "# We are using ALL data points, so this is BATCH gradient descent\n",
+        "# How wrong is our model? That's the error! \n",
+        "error = (yhat - y_train_tensor)\n",
+        "# It is a regression, so it computes mean squared error (MSE)\n",
+        "loss = (error ** 2).mean()\n",
+        "\n",
+        "# Step 3 - Computes gradients for both \"b\" and \"w\" parameters\n",
+        "# No more manual computation of gradients! \n",
+        "# b_grad = 2 * error.mean()\n",
+        "# w_grad = 2 * (x_tensor * error).mean()\n",
+        "loss.backward()"
+      ],
+      "metadata": {
+        "id": "1IYeoeWBHyDP"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Do you see the pattern here? \n",
+        "\n",
+        "If a tensor in the list is used to compute another\n",
+        "tensor, the latter will also be included in the list. Tracking these dependencies is\n",
+        "exactly what the dynamic computation graph is doing."
+      ],
+      "metadata": {
+        "id": "cyUMdmUpJTfO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(error.requires_grad, yhat.requires_grad, b.requires_grad, w.requires_grad)\n",
+        "print(y_train_tensor.requires_grad, x_train_tensor.requires_grad)"
+      ],
+      "metadata": {
+        "id": "TJXqvhBrJVkT",
+        "outputId": "3ff272bc-bbb8-424b-915e-30732ad3f2c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True True True True\n",
+            "False False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What about the actual values of the gradients? \n",
+        "\n",
+        "We can inspect them by looking at\n",
+        "the grad attribute of a tensor."
+      ],
+      "metadata": {
+        "id": "ZqCg5jkOKRgC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(b.grad, w.grad)"
+      ],
+      "metadata": {
+        "id": "0wAoFPquKSv6",
+        "outputId": "a47b06ad-a126-4009-8d51-cc9d5a7d0270",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([-3.4542], device='cuda:0') tensor([-1.9347], device='cuda:0')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If you check the method’s documentation, it clearly states that **gradients are\n",
+        "accumulated**. \n",
+        "\n",
+        "What does it mean? \n",
+        "\n",
+        "It means that, if we run gradient update twice and check the grad attribute afterward."
+      ],
+      "metadata": {
+        "id": "kiPxOFAWKcVO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(b.grad, w.grad)"
+      ],
+      "metadata": {
+        "id": "3wQ4_IAMKok2",
+        "outputId": "b8976676-7ce9-409a-c9f3-e10f6b6d9216",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([-3.4542], device='cuda:0') tensor([-1.9347], device='cuda:0')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "These gradients' values are exactly twice as much as they were before, as\n",
+        "expected!\n",
+        "\n",
+        "OK, but that is actually a problem: we need to use the gradients corresponding to the current loss to perform the parameter update. \n",
+        "\n",
+        "We should NOT use\n",
+        "accumulated gradients.\n",
+        "\n",
+        "So, every time we use the gradients to update the parameters, we need to zero the\n",
+        "gradients afterward.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "UB-KiiwEKyCt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This code will be placed _after_ Step 4 (updating the parameters)\n",
+        "b.grad.zero_(), w.grad.zero_()"
+      ],
+      "metadata": {
+        "id": "R6IzDoodVAlA",
+        "outputId": "accc59a8-7a49-44a3-921c-59afdfe1f282",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([0.], device='cuda:0'), tensor([0.], device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
     }
   ]
 }
