--- a/deep-learning-with-pytorch-step-by-step/02_simple_regression_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/02_simple_regression_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM85VO6CI6MCO0SPj3J/8bi",
+      "authorship_tag": "ABX9TyMTTsFfS+oSjTbleOsZXWOC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
       ],
       "metadata": {
         "id": "pgGfHWV5oZqU",
-        "outputId": "223173ed-5e33-485f-a0a1-f1e24fe8a57d",
+        "outputId": "9f3b9f94-1312-42da-dde8-e90dd8b5e68e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -200,7 +200,7 @@
           "height": 505
         },
         "id": "ZBTcz6BhqYoR",
-        "outputId": "0b46c4c2-91c8-4b68-9045-04525c6431bc"
+        "outputId": "d6116263-d7d8-445f-852d-30ab43a547a5"
       },
       "execution_count": 5,
       "outputs": [
@@ -209,8 +209,8 @@
           "data": {
             "text/plain": [
               "(<Figure size 864x432 with 2 Axes>,\n",
-              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f734fd83d90>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f72dad70790>],\n",
+              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7fa183a39c90>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fa109902990>],\n",
               "       dtype=object))"
             ]
           },
@@ -288,7 +288,7 @@
       ],
       "metadata": {
         "id": "br2g0-4HSk4d",
-        "outputId": "894609c0-9ab2-4081-8c0b-d45b1cc4d305",
+        "outputId": "70784825-4076-48dd-d895-d05e3d80d135",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -372,7 +372,7 @@
       ],
       "metadata": {
         "id": "1n2CtsUXS9gj",
-        "outputId": "f8c1d626-e327-4c88-da8e-728909f1518c",
+        "outputId": "b44fd096-3c1e-4e54-fbbe-d4641d878469",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -424,7 +424,7 @@
       ],
       "metadata": {
         "id": "Vl3-r09yURpb",
-        "outputId": "888afde7-2921-471c-cb2c-c458d844da06",
+        "outputId": "4cc080a6-a679-4760-ccb5-44b3c9f72bed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -478,7 +478,7 @@
       ],
       "metadata": {
         "id": "pkbTlKSbUrD4",
-        "outputId": "01abec25-0da0-4816-f33e-f56cad7c62fa",
+        "outputId": "8123a06a-c05e-4602-febb-4de00616027f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -583,7 +583,7 @@
       ],
       "metadata": {
         "id": "uzXq0fwnDFgE",
-        "outputId": "e8f4159f-d623-47b5-d6eb-3c8401ce1ca0",
+        "outputId": "27fab4ee-839b-4130-b8ff-3331edcfbc46",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -620,7 +620,7 @@
       ],
       "metadata": {
         "id": "WqxxP3wSFz-D",
-        "outputId": "f41dc6ca-6e16-4b03-a9c5-6ba9c8f41148",
+        "outputId": "eb1d04c3-0013-49ab-eb6f-33c0228f15f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -653,7 +653,7 @@
       ],
       "metadata": {
         "id": "5IwTRGzuGUbG",
-        "outputId": "81671df3-1b75-46f7-b098-90db7f63f999",
+        "outputId": "50a79e39-3c78-4062-f02d-83263a197f22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 433
@@ -712,7 +712,7 @@
       ],
       "metadata": {
         "id": "8QA2sK9tiodM",
-        "outputId": "170a5cb1-b0ed-42c7-8ead-6d20081e503a",
+        "outputId": "359be796-8278-47ea-9b96-583049c88869",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -727,13 +727,13 @@
             "tensor([1, 2, 3])\n",
             "tensor([[1., 1., 1.],\n",
             "        [1., 1., 1.]])\n",
-            "tensor([[[-0.9007, -0.7295,  0.8734, -1.3930],\n",
-            "         [ 0.0743, -0.4748, -1.0372,  0.9437],\n",
-            "         [ 2.2151,  1.6202, -0.4343,  0.2960]],\n",
+            "tensor([[[-0.3278, -0.9792,  1.3419, -0.4919],\n",
+            "         [-0.6156,  0.4057,  1.6830,  1.5870],\n",
+            "         [-0.3454,  0.3468, -0.2882, -0.0973]],\n",
             "\n",
-            "        [[ 2.1403,  0.6887,  0.7176, -1.1402],\n",
-            "         [-0.0480, -0.2240, -0.5775, -0.8472],\n",
-            "         [-2.7975,  0.8625, -0.1383, -1.6999]]])\n"
+            "        [[-0.2622,  0.8811,  0.7491,  0.1573],\n",
+            "         [ 1.2518, -1.6781, -0.4518,  0.5862],\n",
+            "         [-0.2120,  0.2090, -2.9755, -1.7130]]])\n"
           ]
         }
       ]
@@ -754,7 +754,7 @@
       ],
       "metadata": {
         "id": "v13QAvfnjd8p",
-        "outputId": "d8bb7816-2c4e-4dae-8761-154fa868b933",
+        "outputId": "38e4bb92-5609-4999-962f-284138453205",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -778,7 +778,7 @@
       ],
       "metadata": {
         "id": "SEUjmq7sjm1e",
-        "outputId": "0da9149f-db6d-4ccb-e207-2dafd7835c92",
+        "outputId": "fb9e5e09-be9f-424c-89f8-e32f3a1dcd53",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -818,7 +818,7 @@
       ],
       "metadata": {
         "id": "GUGgd1V_jziz",
-        "outputId": "896a9705-6618-4169-e06f-d06d4ab06400",
+        "outputId": "bb23143d-4ad0-448b-9b6e-7b65b5d6cc39",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -862,7 +862,7 @@
       ],
       "metadata": {
         "id": "hIwAxu6jkTsO",
-        "outputId": "cd6ef675-7800-4c0e-b158-71029b644a74",
+        "outputId": "b26deeef-93c8-4141-b539-be0b85e9dbe5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -915,7 +915,7 @@
       ],
       "metadata": {
         "id": "J127k_PVlqHN",
-        "outputId": "9d973ef0-dd54-46b1-d0a7-119a4d3e6790",
+        "outputId": "5bd30e02-9f0d-4fce-9670-d5c370cf5884",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -960,7 +960,7 @@
       ],
       "metadata": {
         "id": "i2ZOA43XtLKF",
-        "outputId": "272a78e1-4d50-49e1-aab7-a821fb73f2a6",
+        "outputId": "5fd0ab4b-f738-4ca2-a91f-95e836878bf6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -996,7 +996,7 @@
       ],
       "metadata": {
         "id": "bhb3xZwXtoRe",
-        "outputId": "1ac49461-e09a-4f9d-f835-90b74a94b0bd",
+        "outputId": "c5842303-643b-4bb3-b85a-ada9f2a8e6fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1042,7 +1042,7 @@
       ],
       "metadata": {
         "id": "s1JGislIuNIg",
-        "outputId": "2ebcc157-db5c-46ba-dc3c-a89724d5f1c1",
+        "outputId": "63042c2d-d30a-4ecf-e10b-1242711e9e76",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1068,7 +1068,7 @@
       ],
       "metadata": {
         "id": "ZAU0yUFeunmX",
-        "outputId": "d0ea358f-acdd-4bb7-876b-4c56248d1e28",
+        "outputId": "3c14246a-39f8-4480-86c0-1e963d4723ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1095,7 +1095,7 @@
       ],
       "metadata": {
         "id": "DLl4GTfzutxt",
-        "outputId": "5965f773-85fe-416e-d0a4-ee67b6528419",
+        "outputId": "4a173b78-374c-4b87-d961-f3271fdd7927",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1147,7 +1147,7 @@
       ],
       "metadata": {
         "id": "_Utu0cE4yCRk",
-        "outputId": "f11e895b-1dc7-4b3b-b141-eebdef67ed37",
+        "outputId": "3049c54f-bb3e-42f2-8c1f-cec04f30deca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1181,7 +1181,7 @@
       ],
       "metadata": {
         "id": "7eRDuC6byxqP",
-        "outputId": "da71349f-f357-4a2b-ce84-5ad5228884b7",
+        "outputId": "60f36ef4-9b88-4abe-e525-0f96b988a51b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1215,7 +1215,7 @@
       ],
       "metadata": {
         "id": "_UX1wXYUznz7",
-        "outputId": "d5daf26d-f6f3-4e92-a7a0-704d3e730a7f",
+        "outputId": "4f4cb4e4-2f20-42be-f077-b29125aa0539",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1241,7 +1241,7 @@
       ],
       "metadata": {
         "id": "SHdNn3S_0yFt",
-        "outputId": "7d07d315-8885-4edb-d334-96bdd292cf36",
+        "outputId": "760b2df3-d1e9-4bc0-f16b-5661fcd02712",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1307,7 +1307,7 @@
       ],
       "metadata": {
         "id": "UErHp9X22tU2",
-        "outputId": "173ebb04-e3a6-455e-c48e-6cdb36c14baf",
+        "outputId": "a40095b0-203f-4600-a338-53ba11d9db35",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1330,7 +1330,7 @@
       ],
       "metadata": {
         "id": "dMDY9RT43A0W",
-        "outputId": "36c9340e-6a55-4dde-a932-484181748773",
+        "outputId": "09b299ff-86f3-4523-db00-5b416efce8ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1372,7 +1372,7 @@
       ],
       "metadata": {
         "id": "9ciOSjfg3vLw",
-        "outputId": "223b574b-e34e-48af-8420-857d808fba2e",
+        "outputId": "90dad1eb-4a96-4684-f8cb-cad49a147020",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1460,7 +1460,7 @@
       ],
       "metadata": {
         "id": "oDj4_Y6VrjXC",
-        "outputId": "57011890-6840-48b8-b629-d8ab28d3bcd8",
+        "outputId": "5fe37e29-cdc0-482c-a35a-c693005f6286",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1489,7 +1489,7 @@
       ],
       "metadata": {
         "id": "ZXi9U1tavKJZ",
-        "outputId": "1213f87d-1886-43cf-d42e-80ba6ea81beb",
+        "outputId": "9cd5ff00-4500-4a5f-c16f-6e1c2234fe75",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1521,7 +1521,7 @@
       ],
       "metadata": {
         "id": "32L6EkM5ved4",
-        "outputId": "7ab9f89e-6720-4156-a476-5598cec3b719",
+        "outputId": "b9e85738-685f-4f23-a20b-43fd91eab2c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1569,7 +1569,7 @@
       ],
       "metadata": {
         "id": "HyvDwy8nwARL",
-        "outputId": "da3f0412-65e1-4b8f-91a9-eb6d56e40cf3",
+        "outputId": "dc301edb-c554-4795-d629-363512f57eae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1645,7 +1645,7 @@
       "metadata": {
         "id": "1IYeoeWBHyDP"
       },
-      "execution_count": 44,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1669,7 +1669,7 @@
       ],
       "metadata": {
         "id": "TJXqvhBrJVkT",
-        "outputId": "3ff272bc-bbb8-424b-915e-30732ad3f2c2",
+        "outputId": "e7cf851c-8d31-40f3-94cf-c21b5f7c8e91",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1705,12 +1705,12 @@
       ],
       "metadata": {
         "id": "0wAoFPquKSv6",
-        "outputId": "a47b06ad-a126-4009-8d51-cc9d5a7d0270",
+        "outputId": "f37abe81-686f-44eb-b992-d5b95ff589eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -1742,12 +1742,12 @@
       ],
       "metadata": {
         "id": "3wQ4_IAMKok2",
-        "outputId": "b8976676-7ce9-409a-c9f3-e10f6b6d9216",
+        "outputId": "4000f971-3895-485f-fd99-1767dacd6d56",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -1787,12 +1787,12 @@
       ],
       "metadata": {
         "id": "R6IzDoodVAlA",
-        "outputId": "accc59a8-7a49-44a3-921c-59afdfe1f282",
+        "outputId": "5f26e19c-ed55-4bf3-cec0-03a21d4f702d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1802,9 +1802,124 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 42
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Updating Parameters"
+      ],
+      "metadata": {
+        "id": "ujZxCDGaQ0nI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Unfortunately, our Numpy's code for updating parameters is not enough… why\n",
+        "not?! \n",
+        "\n",
+        "Let’s try it out, simply copying and pasting it (this is the first attempt), changing\n",
+        "it slightly (second attempt), and then asking PyTorch to back off (yes, it is PyTorch’s\n",
+        "fault!)."
+      ],
+      "metadata": {
+        "id": "IIrjMY3HM3WQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "# Sets learning rate\n",
+        "lr = 0.1\n",
+        "\n",
+        "# Step 0 - Initializes parameters \"b\" and \"w\" randomly\n",
+        "b = torch.randn(1, requires_grad=True, dtype=torch.float, device=device)\n",
+        "w = torch.randn(1, requires_grad=True, dtype=torch.float, device=device)\n",
+        "\n",
+        "# Defines number of epochs\n",
+        "n_epochs = 1000\n",
+        "\n",
+        "for epoch in range(n_epochs):\n",
+        "  # Step 1 - Computes model's predicted output - forward pass\n",
+        "  yhat = b + w * x_train_tensor\n",
+        "\n",
+        "  # Step 2 - Computes the loss\n",
+        "  error = (yhat - y_train_tensor)\n",
+        "  loss = (error ** 2).mean()\n",
+        "\n",
+        "  # Step 3 - Computes gradients for both \"b\" and \"w\" parameters\n",
+        "  # No more manual computation of gradients! \n",
+        "  # b_grad = 2 * error.mean()\n",
+        "  # w_grad = 2 * (x_tensor * error).mean()   \n",
+        "  # We just tell PyTorch to work its way BACKWARDS from the specified loss!\n",
+        "  loss.backward()\n",
+        "\n",
+        "  # Step 4 - Updates parameters using gradients and the learning rate. But not so fast...\n",
+        "\n",
+        "  # FIRST ATTEMPT - just using the same code as before\n",
+        "  # AttributeError: 'NoneType' object has no attribute 'zero_'\n",
+        "  # b = b - lr * b.grad\n",
+        "  # w = w - lr * w.grad\n",
+        "  # print(b)\n",
+        "  \n",
+        "  # SECOND ATTEMPT - using in-place Python assigment\n",
+        "  # RuntimeError: a leaf Variable that requires grad\n",
+        "  # has been used in an in-place operation.\n",
+        "  # b -= lr * b.grad\n",
+        "  # w -= lr * w.grad \n",
+        "\n",
+        "  # THIRD ATTEMPT - NO_GRAD for the win!\n",
+        "  # We need to use NO_GRAD to keep the update out of\n",
+        "  # the gradient computation. Why is that? It boils \n",
+        "  # down to the DYNAMIC GRAPH that PyTorch uses...\n",
+        "  with torch.no_grad():\n",
+        "    b -= lr * b.grad\n",
+        "    w -= lr * w.grad\n",
+        "\n",
+        "  # PyTorch is \"clingy\" to its computed gradients, we need to tell it to let it go...\n",
+        "  b.grad.zero_() # zero_ prevents gradient accumulation\n",
+        "  w.grad.zero_()\n",
+        "\n",
+        "print(b, w)"
+      ],
+      "metadata": {
+        "id": "pCF_d2tVM3o1",
+        "outputId": "c7ab8d56-5600-4c2f-8899-f63513852633",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([1.0530], device='cuda:0', requires_grad=True) tensor([1.9958], device='cuda:0', requires_grad=True)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Dynamic Computation Graph"
+      ],
+      "metadata": {
+        "id": "_0PXHilSQ5Al"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "_TKcJt2dQ7Wk"
+      }
     }
   ]
 }
