--- a/deep-learning-with-pytorch-step-by-step/03_rethinking_training_loop.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/03_rethinking_training_loop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcw7WTBPtp+iejS/w2kMbc",
+      "authorship_tag": "ABX9TyPkFl8mM/0tROvUeBHO/k8i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +106,7 @@
       "metadata": {
         "id": "TUEV99bdogt_"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,13 +145,13 @@
       "metadata": {
         "id": "7i8oVtQPpATN"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Next, let’s split our synthetic data into train and validation sets, shuffling the array\n",
+        "Next, let's split our synthetic data into train and validation sets, shuffling the array\n",
         "of indexes and using the first 80 shuffled points for training."
       ],
       "metadata": {
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "6c8vMI5Kpn3Z"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -246,7 +246,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +265,7 @@
       "metadata": {
         "id": "cBF7SEYSTI_-"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -330,7 +330,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
       "metadata": {
         "id": "m_h5sDaTewxh"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -411,7 +411,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,7 +430,7 @@
       "metadata": {
         "id": "kWvH9I1FgVfn"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -454,7 +454,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,7 +541,7 @@
       "metadata": {
         "id": "b3XefPFXpRn_"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -564,7 +564,7 @@
       "metadata": {
         "id": "VZysAc4ys19V"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -599,7 +599,7 @@
         "id": "cBmRPVIUtgUm",
         "outputId": "92b6560f-7a13-44e2-fe9b-0b770c56b4e2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,7 +618,7 @@
       "metadata": {
         "id": "8Ll6fOk5uSAL"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -642,7 +642,7 @@
         "id": "4auCaYf7ucuv",
         "outputId": "a0da694f-67a5-44df-fb9c-52855a29852a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -691,7 +691,7 @@
         "id": "PiCi6H2Kuvw6",
         "outputId": "16239088-5050-432f-e498-941830f97564"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,7 +710,7 @@
       "metadata": {
         "id": "iUtoiOiZvVA7"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -737,7 +737,7 @@
         "id": "UXvayjiTxCXj",
         "outputId": "0dde3495-0e13-4564-d73f-93954d5813d9"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
